anime-list.ejs - se añadio los votos

--- a/src/views/anime/anime-list.ejs
+++ b/src/views/anime/anime-list.ejs
@@ -355,6 +355,7 @@
                     <i class="fas fa-star text-yellow-500 mr-1"></i>
                     <span class="font-semibold">
                       <%= anime.average_rating.toFixed(1) %>
+                        <span class="text-sm">( <%= anime.vote_count %> votos )</span>
                     </span>
                   </div>
                 </div>
