index.ejs * Actualizacion de links

--- a/maintenance/views/index.ejs
+++ b/maintenance/views/index.ejs
@@ -71,7 +71,7 @@
 
             <!-- Enlaces -->
             <div class="flex flex-col sm:flex-row items-center justify-center gap-4 sm:gap-6 mt-8 sm:mt-12 px-4 sm:px-0">
-                <a href="https://discord.gg/nakamastream"
+                <a href="https://discord.com/invite/Rdz4yQneMK"
                     class="w-full sm:w-auto group relative inline-flex items-center justify-center px-6 sm:px-8 py-3 sm:py-4 bg-custom-red hover:bg-red-500 rounded-full transition-all duration-300 overflow-hidden">
                     <span class="relative z-10 flex items-center">
                         <i class="fab fa-discord text-xl sm:text-2xl mr-2 sm:mr-3"></i>
