--- a/maintenance/views/index.ejs
+++ b/maintenance/views/index.ejs
@@ -148,7 +148,7 @@
                             <div class="w-16 h-16 rounded-full overflow-hidden border-2 border-custom-red group-hover:border-red-400 transition-all duration-300">
                                 <img src="https://avatars.githubusercontent.com/u/184460358?v=4" alt="AssDevCl" class="w-full h-full object-cover">
                                 </div>
-                                <span class="mt-2 text-sm font-medium text-gray-300 group-hover:text-custom-red transition-colors duration-300">@Aleixon127271</span>
+                                <span class="mt-2 text-sm font-medium text-gray-300 group-hover:text-custom-red transition-colors duration-300">@AssDevCl</span>
                         </a>
                     </div>
                 </div>
