--- a/maintenance/views/index.ejs
+++ b/maintenance/views/index.ejs
@@ -37,6 +37,25 @@
             }
         }
     </script>
+    <style>
+        /* Personalización del scrollbar */
+        ::-webkit-scrollbar {
+            width: 10px;
+        }
+        
+        ::-webkit-scrollbar-track {
+            background: #1a1a1a;
+        }
+        
+        ::-webkit-scrollbar-thumb {
+            background: #ff6b6b;
+            border-radius: 5px;
+        }
+        
+        ::-webkit-scrollbar-thumb:hover {
+            background: #ff5252;
+        }
+    </style>
 </head>
 
 <body class="bg-[#121212] min-h-screen flex flex-col text-white">
@@ -84,6 +103,14 @@
                     <span class="relative z-10 flex items-center">
                         <i class="fas fa-history text-xl sm:text-2xl mr-2 sm:mr-3"></i>
                         <span class="text-base sm:text-lg font-semibold">Historial de Releases</span>
+                    </span>
+                </a>
+
+                <a href="https://github.com/NakamaStream/NakamaStream"
+                    class="w-full sm:w-auto group relative inline-flex items-center justify-center px-6 sm:px-8 py-3 sm:py-4 bg-[#121212] hover:bg-custom-red rounded-full border border-custom-red transition-all duration-300">
+                    <span class="relative z-10 flex items-center">
+                        <i class="fab fa-github text-xl sm:text-2xl mr-2 sm:mr-3"></i>
+                        <span class="text-base sm:text-lg font-semibold">Código Fuente</span>
                     </span>
                 </a>
             </div>
@@ -149,6 +176,78 @@
                                 <img src="https://avatars.githubusercontent.com/u/184460358?v=4" alt="AssDevCl" class="w-full h-full object-cover">
                                 </div>
                                 <span class="mt-2 text-sm font-medium text-gray-300 group-hover:text-custom-red transition-colors duration-300">@AssDevCl</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Administradores -->
+            <div class="mt-12 text-center">
+                <h3 class="text-2xl font-bold text-custom-red mb-6">Administradores</h3>
+                <div class="flex flex-wrap justify-center gap-6">
+                    <!-- Administrador 1 -->
+                    <div class="group">
+                        <a href="https://nakamastream.lat/profile/Josue_0880" target="_blank" class="flex flex-col items-center">
+                            <div class="w-16 h-16 rounded-full overflow-hidden border-2 border-custom-red group-hover:border-red-400 transition-all duration-300">
+                                <img src="https://i.postimg.cc/281yp7Qg/1731640385219-blob.png" alt="Josue_0880" class="w-full h-full object-cover">
+                            </div>
+                            <span class="mt-2 text-sm font-medium text-gray-300 group-hover:text-custom-red transition-colors duration-300">@Josue_0880</span>
+                        </a>
+                    </div>
+
+                    <!-- Administrador 2 -->
+                    <div class="group">
+                        <a href="https://nakamastream.lat/profile/Santiagolxx" target="_blank" class="flex flex-col items-center">
+                            <div class="w-16 h-16 rounded-full overflow-hidden border-2 border-custom-red group-hover:border-red-400 transition-all duration-300">
+                                <img src="https://i.ibb.co/M21myjH/1733456577646-blob.png" alt="Santiagolxx" class="w-full h-full object-cover">
+                            </div>
+                            <span class="mt-2 text-sm font-medium text-gray-300 group-hover:text-custom-red transition-colors duration-300">@Santiagolxx</span>
+                        </a>
+                    </div>
+
+                    <!-- Administrador 3 -->
+                    <div class="group">
+                        <a href="https://nakamastream.lat/profile/notstaff" target="_blank" class="flex flex-col items-center">
+                            <div class="w-16 h-16 rounded-full overflow-hidden border-2 border-custom-red group-hover:border-red-400 transition-all duration-300">
+                                <img src="https://i.ibb.co/QrJsBkC/lain.png" alt="notstaff" class="w-full h-full object-cover">
+                            </div>
+                            <span class="mt-2 text-sm font-medium text-gray-300 group-hover:text-custom-red transition-colors duration-300">@notstaff</span>
+                        </a>
+                    </div>
+
+                    <!-- Administrador 4 -->
+                    <div class="group">
+                        <a href="https://nakamastream.lat/profile/xd" target="_blank" class="flex flex-col items-center">
+                            <div class="w-16 h-16 rounded-full overflow-hidden border-2 border-custom-red group-hover:border-red-400 transition-all duration-300">
+                                <img src="https://i.ibb.co/FDrFq9k/1733189754536-blob.png" alt="xd" class="w-full h-full object-cover">
+                            </div>
+                            <span class="mt-2 text-sm font-medium text-gray-300 group-hover:text-custom-red transition-colors duration-300">@xd</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Donadores -->
+            <div class="mt-12 text-center">
+                <h3 class="text-2xl font-bold text-custom-red mb-6">Donadores</h3>
+                <div class="flex flex-wrap justify-center gap-6">
+                    <!-- Donador 1 -->
+                    <div class="group">
+                        <a href="https://nakamastream.lat/profile/Josue_0880" target="_blank" class="flex flex-col items-center">
+                            <div class="w-16 h-16 rounded-full overflow-hidden border-2 border-custom-red group-hover:border-red-400 transition-all duration-300">
+                                <img src="https://i.postimg.cc/281yp7Qg/1731640385219-blob.png" alt="Josue_0880" class="w-full h-full object-cover">
+                            </div>
+                            <span class="mt-2 text-sm font-medium text-gray-300 group-hover:text-custom-red transition-colors duration-300">@Josue_0880</span>
+                        </a>
+                    </div>
+
+                    <!-- Donador 2 -->
+                    <div class="group">
+                        <a href="https://nakamastream.lat/profile/uɐɯnɾɐɓpƎ" target="_blank" class="flex flex-col items-center">
+                            <div class="w-16 h-16 rounded-full overflow-hidden border-2 border-custom-red group-hover:border-red-400 transition-all duration-300">
+                                <img src="https://i.ibb.co/y0HhLSq/1735833954257-blob.png" alt="uɐɯnɾɐɓpƎ" class="w-full h-full object-cover">
+                            </div>
+                            <span class="mt-2 text-sm font-medium text-gray-300 group-hover:text-custom-red transition-colors duration-300">@uɐɯnɾɐɓpƎ</span>
                         </a>
                     </div>
                 </div>
